--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="card text-center">
       <img src="images/profile.jpg" alt="Natalia Vega" id="img-profile" class="img-circle">
       <h1>Natalia Vega</h1>
-      <h2>Developper</h2>
+      <h2>Programmer</h2>
         <p> Former biochemist <i class="fas fa-flask"></i> now I want to design websites & <strong>cool stuff</strong> <i class="fas fa-magic"></i>. <br>Learning one skill at a time, currently I'm learning the front-end side of the force (HTML, CSS, Bootstrap & some Javascript), after some weeks learning to git, Ruby & databases (SQL, ActiveRecord).
         <br> I love photography, a good reading & watercolor painting.</p>
           <a href="https://github.com/v-natalia" target="_blank" class="btn-maroon"> <i class="fab fa-github"></i>Find me on Github</a>
