Minor changes in btn-brown

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h2>Programmer</h2>
         <p> Former biochemist <i class="fas fa-flask"></i> now I want to design websites & <strong>cool stuff</strong> <i class="fas fa-magic"></i>. <br>Learning one skill at a time, currently I'm learning the front-end side of the force (HTML, CSS, Bootstrap & some Javascript), after some weeks learning to git, Ruby & databases (SQL, ActiveRecord).
         <br> I love photography, a good reading & watercolor painting.</p>
-          <a href="https://github.com/v-natalia" target="_blank" class="btn-maroon"> <i class="fab fa-github"></i>  Find me on Github</a>
+          <a href="https://github.com/v-natalia" target="_blank" class="btn-brown">  <i class="fab fa-github"></i>  Find me on Github</a>
     </div>
     <div class="card text-center links">
       <h3>You can also find me in: </h2>
@@ -48,7 +48,7 @@
             </td>
                <td>
               <h3>Nebraska (2013)</h3>
-                <p>As a photography-lover <i class="fas fa-camera-retro"></i> I couldn't help but I have to put this movie on the top of my list. An aging, booze-addled father makes the trip from Montana to Nebraska with his estranged son in order to claim a million-dollar Mega Sweepstakes Marketing prize.</p>
+                <p> As a photography-lover <i class="fas fa-camera-retro"></i> I couldn't help but I have to put this movie on the top of my list. An aging, booze-addled father makes the trip from Montana to Nebraska with his estranged son in order to claim a million-dollar Mega Sweepstakes Marketing prize.</p>
             </td>
           </tr>
           <tr>
@@ -57,7 +57,7 @@
             </td>
             <td>
               <h3>Lost in Translation (2003)</h3>
-                <p>A faded movie star and a neglected young woman form an unlikely bond after crossing paths in Tokyo.</p>
+                <p> A faded movie star and a neglected young woman form an unlikely bond after crossing paths in Tokyo.</p>
             </td>
           </tr>
           <tr>
@@ -66,7 +66,7 @@
             </td>
             <td>
               <h3>Eternal Sunshine of the Spotless Mind (2004)</h3>
-                <p>When their relationship turns sour, a couple undergoes a medical procedure to have each other erased from their memories.</p>
+                <p> When their relationship turns sour, a couple undergoes a medical procedure to have each other erased from their memories.</p>
             </td>
           </tr>
         </tbody>
@@ -78,7 +78,7 @@
   <div class="container">
     <div class="card text-center ">
       <h2>About this page</h2>
-        <p>This page has been coded during the <a href="https://lewagon.com/program" target="_blank">FullStack program @LeWagon</a>. That was probably the best experience of my entire life. <br> <a href="https://www.instagram.com/p/Bs-Pe7VBhxC/?utm_source=ig_web_button_share_sheet"target="_blank"> See me on Le Wagon's Instagram <i class="fab fa-instagram"></i></a> </p>
+        <p> This page has been coded during the <a href="https://lewagon.com/program" target="_blank">FullStack program @LeWagon</a>. That was probably the best experience of my entire life. <br> <a href="https://www.instagram.com/p/Bs-Pe7VBhxC/?utm_source=ig_web_button_share_sheet"target="_blank"> See me on Le Wagon's Instagram <i class="fab fa-instagram"></i></a> </p>
         <ul class="list-inline">
          <li class="text-center">
            <a href="#">
