Added more films and books, corrections in the style

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Natalia Vega | Web Developper</title>
-  <meta name="description" content="Natalia Vega | Web Developper">
-  <meta property="og:title" content="Natalia Vega | Web Developper">
+  <title>Natalia Vega | Programmer</title>
+<!--   <meta name="description" content="Natalia Vega | Programmer"> -->
+  <meta property="og:title" content="Natalia Vega | Programmer">
   <meta property="og:image" content="images/facebook-profile.jpg">
-  <meta property="og:description" content="Natalia Vega | Web Developper">
+<!--   <meta property="og:description" content="Natalia Vega | Programmer"> -->
   <meta property="og:site_name" content="Natalia Vega"/>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Sarabun:300,400" rel="stylesheet">
@@ -19,54 +19,111 @@
       <img src="images/profile.jpg" alt="Natalia Vega" id="img-profile" class="img-circle">
       <h1>Natalia Vega</h1>
       <h2>Programmer</h2>
-        <p> Former biochemist <i class="fas fa-flask"></i> now I want to design websites & <strong>cool stuff</strong> <i class="fas fa-magic"></i>. <br>Learning one skill at a time, currently I'm learning the front-end side of the force (HTML, CSS, Bootstrap & some Javascript), after some weeks learning to git, Ruby & databases (SQL, ActiveRecord).
-        <br> I love photography, a good reading & watercolor painting.</p>
-          <a href="https://github.com/v-natalia" target="_blank" class="btn-brown">  <i class="fab fa-github"></i>  Find me on Github</a>
+        <p> I'm Chilean, living in France. Former biochemist <i class="fas fa-flask"></i> now I want to design websites &  <strong> cool stuff</strong>  <i class="fas fa-magic"></i>. Learning one skill at a time, after some weeks learning to git, Ruby & databases (SQL, ActiveRecord), I'm currently going to the front-end side of the force (HTML, CSS, Bootstrap & some Javascript).
+        When I'm not coding, I love to take photos, watch a good'ol super-heroes movie, reading or paint with watercolors. In fact, one day I would <em> love </em> to write & illustrate a child's book. Big dreamer. </p>
+        <a href="https://github.com/v-natalia" target="_blank" class="btn-brown"><i class="fab fa-github"></i>Find me on Github</a>
     </div>
     <div class="card text-center links">
-      <h3>You can also find me in: </h2>
+      <h3>I prefer real-life world, but you can also find me online in: </h2>
         <ul class="list-inline">
           <li class="text-center">
             <a href="https://www.linkedin.com/in/natalia-vega-riveros/" target="_blank">
-              <i class="fab fa-linkedin"></i> Linkedin
-            </a>
-          </li>
-          <li class="text-center">
-            <a href="https://500px.com/picsfromserendipity" target="_blank">
-              <i class="fab fa-500px"></i> 500px
+              <i class="fab fa-linkedin"></i>Linkedin
             </a>
           </li>
         </ul>
     </div>
     <div class="card text-center">
       <h2> My favorite movies</h2>
-      <table id="img-profile" class="img-circle">
+      <table class="table">
         <tbody>
           <tr>
             <td>
-              <img src="images/nebraska.jpg" alt="Nebraska">
+              <a href="https://www.imdb.com/title/tt1821549" target="_blank"> <img src="images/nebraska.jpg" alt="Nebraska">
             </td>
                <td>
               <h3>Nebraska (2013)</h3>
-                <p> As a photography-lover <i class="fas fa-camera-retro"></i> I couldn't help but I have to put this movie on the top of my list. An aging, booze-addled father makes the trip from Montana to Nebraska with his estranged son in order to claim a million-dollar Mega Sweepstakes Marketing prize.</p>
+                <p> As a photography-lover <i class="fas fa-camera-retro"></i> I couldn't help but I have to put this movie on the top of my list. Is a black&white movie, with awesome photography and a heartbreakin story about an old man travelling to Nebraska to claim a million-dollar Mega Sweepstakes Marketing prize.</p>
             </td>
           </tr>
           <tr>
             <td>
-              <img src="images/lostintranslation.jpg" alt="Lost in Translation">
+              <a href="https://www.imdb.com/title/tt1655442/" target="_blank"> <img src="images/theartist.jpg" alt="The Artist film">
             </td>
             <td>
-              <h3>Lost in Translation (2003)</h3>
-                <p> A faded movie star and a neglected young woman form an unlikely bond after crossing paths in Tokyo.</p>
+              <h3>The Artist (2011)</h3>
+                <p> Another black&white movie (I guess you can see a trend here) which is also a silent movie. Really nice actoral game and a story about the transition onto the talking-pictures movies in the mid-to-late-1920s.</p>
             </td>
           </tr>
           <tr>
             <td>
-              <img src="images/eternal.jpg" alt="Eternal sunshine of a spotless mind">
+              <a href="https://www.imdb.com/title/tt1014762" target="_blank"> <img src="images/home.jpg" alt="Eternal sunshine of a spotless mind">
+            </td>
+            <td>
+              <h3>Home (2009)</h3>
+                <p>A Yann Arthus-Bertrand's film which depicts the state of our planet Earth using aerial footage from more than fifty countries around the world. </p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href="https://www.imdb.com/title/tt0338013" target="_blank"> <img src="images/eternal.jpg" alt="Eternal sunshine of the spotless mind">
             </td>
             <td>
               <h3>Eternal Sunshine of the Spotless Mind (2004)</h3>
-                <p> When their relationship turns sour, a couple undergoes a medical procedure to have each other erased from their memories.</p>
+                <p> A couple fall in love, and then one of them decide to follow a "pseudo-medical" procedure to erase the other from their memories. Or how you are condemned to fall in love in a no-exit-way</p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href="https://www.imdb.com/title/tt0335266/" target="_blank"> <img src="images/lostintranslation.jpg" alt="Lost in Translation">
+            </td>
+            <td>
+              <h3>Lost in Translation (2003)</h3>
+                <p> You are in Tokyo and you don't speak japanese. You are (almost) alone. You are lost in translation. How do you find yourself again? </p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <h2> My favorite books</h2>
+      <table class="table">
+        <tbody>
+          <tr>
+            <td>
+              <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Du-monde-entier/Les-autonautes-de-la-cosmoroute-ou-Un-voyage-intemporel-Paris-Marseille" target="_blank"> <img src="images/autonautes.jpg" alt="Les autonautes de la cosmoroute ou Un voyage intemporel Paris-Marseille">
+            </td>
+            <td>
+              <h3>Les autonautes de la cosmoroute ou Un voyage intemporel Paris-Marseille - Julio Cortázar & Carol Dunlop</h3>
+              <p> Written at four hands by an Argentine writer and his wife, their travel is an atemporal-exploratory journey from Paris to Marseille. Love, illness, and surrealism in a Wolkswagen Kombi. And "cronopios", lots of them. </p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href="https://www.amazon.fr/Altazor-Spanish-Vicente-Huidobro-ebook/dp/B00I4KRKVA" target="_blank"> <img src="images/Altazor.jpg" alt="Altazor">
+            </td>
+            <td>
+              <h3>Altazor - Vicente Huidobro</h3>
+                <p> Another book in spanish! I'm sorry but is magnificent poetry from my country, which we use to call "country of poetry". <br>
+
+                "Why do you sing the rose, oh poets !? / Make it bloom in the poem."
+                Boum! Mind-blowing.</p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href="https://www.marabout.com/profession-slasheur-9782501121958" target="_blank"> <img src="images/slasheur.jpg" alt="Book Profession Slasheur">
+            </td>
+            <td>
+              <h3>Profession Slasheur - Marielle Barbe</h3>
+                <p> A new way to understand the atypical professional profiles and the changing concept of work. If you never feel comfortable when someone asks you "What do you do for a living?", maybe this book is for you. </p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href="https://www.amazon.fr/Valparaiso-Sergio-Larrain/dp/2365111149" target="_blank"> <img src="images/valparaiso.jpg" alt="Photography book- Valparaiso - Sergio Larraín">
+            </td>
+            <td>
+              <h3>Valparaíso - <a href="https://www.magnumphotos.com/photographer/sergio-larrain/" target="_blank"> Sergio Larraín </a></h3>
+                <p> The Chilean photographer, Sergio Larrain, affiliated to Magnum agency,  published his most noteworthy work in the book, Valparaiso. With handwritten and typed notes, letters, and drawings he share his singular vision of the world. After a decade of work as a profesional photographer and very moved for what he saw in the Algerian War, he decided to return to live in the north of Chile, secluded and anonymous, meditating and not doing photographies anymore.</p>
             </td>
           </tr>
         </tbody>
@@ -78,21 +135,21 @@
   <div class="container">
     <div class="card text-center ">
       <h2>About this page</h2>
-        <p> This page has been coded during the <a href="https://lewagon.com/program" target="_blank">FullStack program @LeWagon</a>. That was probably the best experience of my entire life. <br> <a href="https://www.instagram.com/p/Bs-Pe7VBhxC/?utm_source=ig_web_button_share_sheet"target="_blank"> See me on Le Wagon's Instagram <i class="fab fa-instagram"></i></a> </p>
+        <p> This page has been coded during the <a href="https://lewagon.com/program" target="_blank">FullStack program @LeWagon</a><br> <a href="https://www.instagram.com/p/Bs-Pe7VBhxC/?utm_source=ig_web_button_share_sheet"target="_blank"> See me on Le Wagon's Instagram <i class="fab fa-instagram"></i></a> </p>
         <ul class="list-inline">
          <li class="text-center">
-           <a href="#">
-             <i class="fas fa-headphones-alt"></i>
+           <a href="https://open.spotify.com/album/3539EbNgIdEDGBKkUf4wno" target="_blank">
+             <i class="fas fa-headphones-alt"></i>What I'm listening
            </a>
          </li>
          <li class="text-center">
-           <a href="#">
-             <i class="fa fa-share"></i>
+           <a href="https://500px.com/picsfromserendipity" target="_blank">
+             <i class="fab fa-500px"></i> My 500px profile
            </a>
          </li>
-          <liclass="text-center">
-           <a href="#">
-             <i class="fas fa-palette"></i>
+          <li class="text-center">
+           <a href="https://www.amazon.com/Within-Frame-Journey-Photographic-Vision/dp/0321605020">
+             <i class="fas fa-palette"></i> Last book I read
            </a>
          </li>
         </ul>
