--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <img src="images/profile.jpg" alt="Natalia Vega" id="img-profile" class="img-circle">
       <h1>Natalia Vega</h1>
       <h2>Programmer</h2>
-        <p> I'm Chilean, living in France. Former biochemist <i class="fas fa-flask"></i> now I want to design websites &  <strong> cool stuff</strong>  <i class="fas fa-magic"></i>. Learning one skill at a time, after some weeks learning to git, Ruby & databases (SQL, ActiveRecord), I'm currently going to the front-end side of the force (HTML, CSS, Bootstrap & some Javascript).
-        When I'm not coding, I love to take photos, watch a good'ol super-heroes movie, reading or paint with watercolors. In fact, one day I would <em> love </em> to write & illustrate a child's book. Big dreamer. </p>
+        <p> I'm Chilean, living in France. Former biochemist <i class="fas fa-flask"></i> now I want to design websites &  <strong> cool stuff</strong>  <i class="fas fa-magic"></i>. Learning one skill at a time, after some weeks learning to git, Ruby & databases (SQL, ActiveRecord), I'm currently going to the front-end side-of-the-force (HTML, CSS, Bootstrap & some Javascript).
+        When I'm not coding, or trying to spend quality tie with my family, I love to take photos, watch a good'ol super-heroes movie, read or paint with watercolors. In fact, one day, I would <em> love </em> to write & illustrate a children's book. I'm a big dreamer. </p>
         <a href="https://github.com/v-natalia" target="_blank" class="btn-brown"><i class="fab fa-github"></i>Find me on Github</a>
     </div>
     <div class="card text-center links">
@@ -43,7 +43,7 @@
             </td>
                <td>
               <h3>Nebraska (2013)</h3>
-                <p> As a photography-lover <i class="fas fa-camera-retro"></i> I couldn't help but I have to put this movie on the top of my list. Is a black&white movie, with awesome photography and a heartbreakin story about an old man travelling to Nebraska to claim a million-dollar Mega Sweepstakes Marketing prize.</p>
+                <p> As a photography-lover <i class="fas fa-camera-retro"></i> I couldn't help but I have to put this movie on the top of my list. Is a black&white movie, with awesome photography and a heartbreaking story about an old man travelling to Nebraska, USA, to claim a million-dollar prize.</p>
             </td>
           </tr>
           <tr>
@@ -70,7 +70,7 @@
             </td>
             <td>
               <h3>Eternal Sunshine of the Spotless Mind (2004)</h3>
-                <p> A couple fall in love, and then one of them decide to follow a "pseudo-medical" procedure to erase the other from their memories. Or how you are condemned to fall in love in a no-exit-way</p>
+                <p> A couple falls in love, and suddenly one of them decide to follow a "pseudo-medical" procedure to erase the other from their memories. Or how you are condemned to fall in love in a no-exit-way. </p>
             </td>
           </tr>
           <tr>
@@ -92,8 +92,8 @@
               <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Du-monde-entier/Les-autonautes-de-la-cosmoroute-ou-Un-voyage-intemporel-Paris-Marseille" target="_blank"> <img src="images/autonautes.jpg" alt="Les autonautes de la cosmoroute ou Un voyage intemporel Paris-Marseille">
             </td>
             <td>
-              <h3>Les autonautes de la cosmoroute ou Un voyage intemporel Paris-Marseille - Julio Cortázar & Carol Dunlop</h3>
-              <p> Written at four hands by an Argentine writer and his wife, their travel is an atemporal-exploratory journey from Paris to Marseille. Love, illness, and surrealism in a Wolkswagen Kombi. And "cronopios", lots of them. </p>
+              <h3>Les autonautes de la cosmoroute ou Un voyage intemporel Paris-Marseille - Julio Cortázar & Carol Dunlop.</h3>
+              <p> Written at four hands by an Argentine writer and his Canadian wife, their travel is an atemporal-exploratory journey from Paris to Marseille. Love, illness, and surrealism in a Wolkswagen Kombi. And "cronopios", lots of them. </p>
             </td>
           </tr>
           <tr>
@@ -102,10 +102,10 @@
             </td>
             <td>
               <h3>Altazor - Vicente Huidobro</h3>
-                <p> Another book in spanish! I'm sorry but is magnificent poetry from my country, which we use to call "country of poetry". <br>
+                <p> Another book in spanish! I'm sorry but is a magnificent poet from my country. <br>
 
                 "Why do you sing the rose, oh poets !? / Make it bloom in the poem."
-                Boum! Mind-blowing.</p>
+                Bum! Mind-blowing.</p>
             </td>
           </tr>
           <tr>
@@ -123,7 +123,7 @@
             </td>
             <td>
               <h3>Valparaíso - <a href="https://www.magnumphotos.com/photographer/sergio-larrain/" target="_blank"> Sergio Larraín </a></h3>
-                <p> The Chilean photographer, Sergio Larrain, affiliated to Magnum agency,  published his most noteworthy work in the book, Valparaiso. With handwritten and typed notes, letters, and drawings he share his singular vision of the world. After a decade of work as a profesional photographer and very moved for what he saw in the Algerian War, he decided to return to live in the north of Chile, secluded and anonymous, meditating and not doing photographies anymore.</p>
+                <p> The Chilean photographer, Sergio Larrain, affiliated to Magnum agency,  published his most noteworthy work in the book, Valparaiso. Using handwritten notes, letters, and drawings he share his singular vision of the world. After a decade of work as a profesional photographer and very moved for what he saw in the Algerian War, he decided to return to live in the north of Chile, secluded and anonymous, meditating and not doing photographies anymore.</p>
             </td>
           </tr>
         </tbody>
@@ -138,18 +138,18 @@
         <p> This page has been coded during the <a href="https://lewagon.com/program" target="_blank">FullStack program @LeWagon</a><br> <a href="https://www.instagram.com/p/Bs-Pe7VBhxC/?utm_source=ig_web_button_share_sheet"target="_blank"> See me on Le Wagon's Instagram <i class="fab fa-instagram"></i></a> </p>
         <ul class="list-inline">
          <li class="text-center">
-           <a href="https://open.spotify.com/album/3539EbNgIdEDGBKkUf4wno" target="_blank">
+           <a href="https://open.spotify.com/playlist/37i9dQZF1DZ06evO0KiRk4" target="_blank">
              <i class="fas fa-headphones-alt"></i>What I'm listening
            </a>
          </li>
          <li class="text-center">
            <a href="https://500px.com/picsfromserendipity" target="_blank">
-             <i class="fab fa-500px"></i> My 500px profile
+             <i class="fab fa-500px"></i>My 500px profile
            </a>
          </li>
           <li class="text-center">
            <a href="https://www.amazon.com/Within-Frame-Journey-Photographic-Vision/dp/0321605020">
-             <i class="fas fa-palette"></i> Last book I read
+             <i class="fas fa-palette"></i>Last book I read
            </a>
          </li>
         </ul>
