--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
   <meta property="og:site_name" content="Natalia Vega"/>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Sarabun:300,400" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+ <!--  <div class="banner" style="background-image: linear-gradient(-225deg, rgb(155, 152, 146) 5%, rgba(10,30,61,0.6) 10%), url('images/banner.jpg');">
+  </div> -->
   <div class="container">
     <div class="card text-center">
       <img src="images/profile.jpg" alt="Natalia Vega" id="img-profile" class="img-circle">
@@ -21,18 +23,17 @@
       <h2>Programmer</h2>
         <p> I'm Chilean, living in France. Former biochemist <i class="fas fa-flask"></i> now I want to design websites &  <strong> cool stuff</strong>  <i class="fas fa-magic"></i>. Learning one skill at a time, after some weeks learning to git, Ruby & databases (SQL, ActiveRecord), I'm currently going to the front-end side-of-the-force (HTML, CSS, Bootstrap & some Javascript).
         When I'm not coding, or trying to spend quality tie with my family, I love to take photos, watch a good'ol super-heroes movie, read or paint with watercolors. In fact, one day, I would <em> love </em> to write & illustrate a children's book. I'm a big dreamer. </p>
-        <a href="https://github.com/v-natalia" target="_blank" class="btn-brown"><i class="fab fa-github"></i>Find me on Github</a>
+        <a href="https://github.com/v-natalia" target="_blank" class="btn-brown"><i class="fab fa-github"></i>Github</a>
+        <a href="https://www.linkedin.com/in/natalia-vega-riveros/" target="_blank" class="btn-brown"> <i class="fab fa-linkedin"></i>Linkedin</a>
     </div>
-    <div class="card text-center links">
+ <!--    <div class="card text-center links">
       <h3>I prefer real-life world, but you can also find me online in: </h2>
         <ul class="list-inline">
           <li class="text-center">
-            <a href="https://www.linkedin.com/in/natalia-vega-riveros/" target="_blank">
-              <i class="fab fa-linkedin"></i>Linkedin
-            </a>
+            <a href="https://www.linkedin.com/in/natalia-vega-riveros/" target="_blank"> <i class="fab fa-linkedin"></i>Linkedin</a>
           </li>
         </ul>
-    </div>
+    </div> -->
     <div class="card text-center">
       <h2> My favorite movies</h2>
       <table class="table">
