--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
   </div> -->
   <div class="container">
     <div class="card text-center">
-      <img src="images/profile.jpg" alt="Natalia Vega" id="img-profile" class="img-circle">
+      <img src="images/facebook-profile.jpg" alt="Natalia Vega" id="img-profile" class="img-circle">
       <h1>Natalia Vega</h1>
       <h2>Programmer</h2>
-        <p> I'm Chilean, living in France. Former biochemist <i class="fas fa-flask"></i> now I want to design websites &  <strong> cool stuff</strong>  <i class="fas fa-magic"></i>. Learning one skill at a time, after some weeks learning to git, Ruby & databases (SQL, ActiveRecord), I'm currently going to the front-end side-of-the-force (HTML, CSS, Bootstrap & some Javascript).
-        When I'm not coding, or trying to spend quality tie with my family, I love to take photos, watch a good'ol super-heroes movie, read or paint with watercolors. In fact, one day, I would <em> love </em> to write & illustrate a children's book. I'm a big dreamer. </p>
+        <p> I'm Chilean, living in France. Former biochemist <i class="fas fa-flask"></i> now I want to design websites &  <strong> cool stuff</strong>  <i class="fas fa-magic"></i>. Learning one skill at a time, after some weeks learning to git, Ruby & databases (SQL, ActiveRecord), HTML, CSS, Bootstrap & some Javascript, we did a Rails that you can find <a href="https://www.reecover.fr">here</a>.</p>
+          <br>
+        <p>When I'm not coding, or trying to spend quality time with my family, I love to take photos, watch a good'ol super-heroes movie, read or paint with watercolors. In fact, one day, I would <em> love </em> to write & illustrate a children's book. I'm a big dreamer. </p>
         <a href="https://github.com/v-natalia" target="_blank" class="btn-brown"><i class="fab fa-github"></i>Github</a>
         <a href="https://www.linkedin.com/in/natalia-vega-riveros/" target="_blank" class="btn-brown"> <i class="fab fa-linkedin"></i>Linkedin</a>
     </div>
@@ -34,6 +35,7 @@
           </li>
         </ul>
     </div> -->
+  <div class="container">
     <div class="card text-center">
       <h2> My favorite movies</h2>
       <table class="table">
@@ -84,56 +86,57 @@
             </td>
           </tr>
         </tbody>
-      </table>
-      <h2> My favorite books</h2>
-      <table class="table">
-        <tbody>
-          <tr>
-            <td>
-              <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Du-monde-entier/Les-autonautes-de-la-cosmoroute-ou-Un-voyage-intemporel-Paris-Marseille" target="_blank"> <img src="images/autonautes.jpg" alt="Les autonautes de la cosmoroute ou Un voyage intemporel Paris-Marseille">
-            </td>
-            <td>
-              <h3>Les autonautes de la cosmoroute ou Un voyage intemporel Paris-Marseille - Julio Cortázar & Carol Dunlop.</h3>
-              <p> Written at four hands by an Argentine writer and his Canadian wife, their travel is an atemporal-exploratory journey from Paris to Marseille. Love, illness, and surrealism in a Wolkswagen Kombi. And "cronopios", lots of them. </p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <a href="https://www.amazon.fr/Altazor-Spanish-Vicente-Huidobro-ebook/dp/B00I4KRKVA" target="_blank"> <img src="images/Altazor.jpg" alt="Altazor">
-            </td>
-            <td>
-              <h3>Altazor - Vicente Huidobro</h3>
-                <p> Another book in spanish! I'm sorry but is a magnificent poet from my country. <br>
+        </table>
+        <h2> My favorite books</h2>
+        <table class="table">
+          <tbody>
+            <tr>
+              <td>
+                <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Du-monde-entier/Les-autonautes-de-la-cosmoroute-ou-Un-voyage-intemporel-Paris-Marseille" target="_blank"> <img src="images/autonautes.jpg" alt="Les autonautes de la cosmoroute ou Un voyage intemporel Paris-Marseille">
+              </td>
+              <td>
+                <h3>Les autonautes de la cosmoroute ou Un voyage intemporel Paris-Marseille - Julio Cortázar & Carol Dunlop.</h3>
+                <p> Written at four hands by an Argentine writer and his Canadian wife, their travel is an atemporal-exploratory journey from Paris to Marseille. Love, illness, and surrealism in a Wolkswagen Kombi. And "cronopios", lots of them. </p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <a href="https://www.amazon.fr/Altazor-Spanish-Vicente-Huidobro-ebook/dp/B00I4KRKVA" target="_blank"> <img src="images/Altazor.jpg" alt="Altazor">
+              </td>
+              <td>
+                <h3>Altazor - Vicente Huidobro</h3>
+                  <p> Another book in spanish! I'm sorry but is a magnificent poet from my country. <br>
 
-                "Why do you sing the rose, oh poets !? / Make it bloom in the poem."
-                Bum! Mind-blowing.</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <a href="https://www.marabout.com/profession-slasheur-9782501121958" target="_blank"> <img src="images/slasheur.jpg" alt="Book Profession Slasheur">
-            </td>
-            <td>
-              <h3>Profession Slasheur - Marielle Barbe</h3>
-                <p> A new way to understand the atypical professional profiles and the changing concept of work. If you never feel comfortable when someone asks you "What do you do for a living?", maybe this book is for you. </p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <a href="https://www.amazon.fr/Valparaiso-Sergio-Larrain/dp/2365111149" target="_blank"> <img src="images/valparaiso.jpg" alt="Photography book- Valparaiso - Sergio Larraín">
-            </td>
-            <td>
-              <h3>Valparaíso - <a href="https://www.magnumphotos.com/photographer/sergio-larrain/" target="_blank"> Sergio Larraín </a></h3>
-                <p> The Chilean photographer, Sergio Larrain, affiliated to Magnum agency,  published his most noteworthy work in the book, Valparaiso. Using handwritten notes, letters, and drawings he share his singular vision of the world. After a decade of work as a profesional photographer and very moved for what he saw in the Algerian War, he decided to return to live in the north of Chile, secluded and anonymous, meditating and not doing photographies anymore.</p>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+                  "Why do you sing the rose, oh poets !? / Make it bloom in the poem."
+                  Bum! Mind-blowing.</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <a href="https://www.marabout.com/profession-slasheur-9782501121958" target="_blank"> <img src="images/slasheur.jpg" alt="Book Profession Slasheur">
+              </td>
+              <td>
+                <h3>Profession Slasheur - Marielle Barbe</h3>
+                  <p> A new way to understand the atypical professional profiles and the changing concept of work. If you never feel comfortable when someone asks you "What do you do for a living?", maybe this book is for you. </p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <a href="https://www.amazon.fr/Valparaiso-Sergio-Larrain/dp/2365111149" target="_blank"> <img src="images/valparaiso.jpg" alt="Photography book- Valparaiso - Sergio Larraín">
+              </td>
+              <td>
+                <h3>Valparaíso - <a href="https://www.magnumphotos.com/photographer/sergio-larrain/" target="_blank"> Sergio Larraín </a></h3>
+                  <p> The Chilean photographer, Sergio Larrain, affiliated to Magnum agency,  published his most noteworthy work in the book, Valparaiso. Using handwritten notes, letters, and drawings he share his singular vision of the world. After a decade of work as a profesional photographer and very moved for what he saw in the Algerian War, he decided to return to live in the north of Chile, secluded and anonymous, meditating and not doing photographies anymore.</p>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </body>
 <footer>
-  <div class="container">
+  <div class="footer">
     <div class="card text-center ">
       <h2>About this page</h2>
         <p> This page has been coded during the <a href="https://lewagon.com/program" target="_blank">FullStack program @LeWagon</a><br> <a href="https://www.instagram.com/p/Bs-Pe7VBhxC/?utm_source=ig_web_button_share_sheet"target="_blank"> See me on Le Wagon's Instagram <i class="fab fa-instagram"></i></a> </p>
