--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <img src="images/facebook-profile.jpg" alt="Natalia Vega" id="img-profile" class="img-circle">
       <h1>Natalia Vega</h1>
       <h2>Programmer</h2>
-        <p> I'm Chilean, living in France. Former biochemist <i class="fas fa-flask"></i> now I want to design websites &  <strong> cool stuff</strong>  <i class="fas fa-magic"></i>. Learning one skill at a time, after some weeks learning to git, Ruby & databases (SQL, ActiveRecord), HTML, CSS, Bootstrap & some Javascript, we did a Rails that you can find <a href="https://www.reecover.fr">here</a>.</p>
+        <p> I'm Chilean, living in France. Former biochemist <i class="fas fa-flask"></i> now I want to design websites &  <strong> cool stuff</strong>  <i class="fas fa-magic"></i>. Learning one skill at a time, after some weeks learning to git, Ruby & databases (SQL, ActiveRecord), HTML, CSS, Bootstrap & some Javascript, we did a Rails app that you can find <a href="https://www.reecover.fr">here</a>.</p>
           <br>
         <p>When I'm not coding, or trying to spend quality time with my family, I love to take photos, watch a good'ol super-heroes movie, read or paint with watercolors. In fact, one day, I would <em> love </em> to write & illustrate a children's book. I'm a big dreamer. </p>
         <a href="https://github.com/v-natalia" target="_blank" class="btn-brown"><i class="fab fa-github"></i>Github</a>
