add portfolio link

--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@
 <head>
   <meta charset="utf-8">
   <title>Natalia Vega | Programmer</title>
-<!--   <meta name="description" content="Natalia Vega | Programmer"> -->
+  <meta name="description" content="Natalia Vega | Programmer">
   <meta property="og:title" content="Natalia Vega | Programmer">
   <meta property="og:image" content="images/facebook-profile.jpg">
-<!--   <meta property="og:description" content="Natalia Vega | Programmer"> -->
+  <meta property="og:description" content="Natalia Vega | Programmer">
   <meta property="og:site_name" content="Natalia Vega"/>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Sarabun:300,400" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
- <!--  <div class="banner" style="background-image: linear-gradient(-225deg, rgb(155, 152, 146) 5%, rgba(10,30,61,0.6) 10%), url('images/banner.jpg');">
-  </div> -->
   <div class="container">
     <div class="card text-center">
       <img src="images/facebook-profile.jpg" alt="Natalia Vega" id="img-profile" class="img-circle">
@@ -26,6 +23,7 @@
         <p>When I'm not coding, or trying to spend quality time with my family, I love to take photos, watch a good'ol super-heroes movie, read or paint with watercolors. In fact, one day, I would <em> love </em> to write & illustrate a children's book. I'm a big dreamer. </p>
         <a href="https://github.com/v-natalia" target="_blank" class="btn-brown"><i class="fab fa-github"></i>Github</a>
         <a href="https://www.linkedin.com/in/natalia-vega-riveros/" target="_blank" class="btn-brown"> <i class="fab fa-linkedin"></i>Linkedin</a>
+        <a href="https://v-natalia.github.io/portfolio/" target="_blank" class="btn-brown"> <i class="far fa-images"></i>Portfolio</a>
     </div>
  <!--    <div class="card text-center links">
       <h3>I prefer real-life world, but you can also find me online in: </h2>
