--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container">
     <div class="card text-center">
-      <img src="images/facebook-profile.jpg" alt="Natalia Vega" id="img-profile" class="img-circle">
+      <img src="images/natalia.jpg" alt="Natalia Vega" id="img-profile" class="img-circle">
       <h1>Natalia Vega</h1>
       <h2>Programmer</h2>
         <p> I'm Chilean, living in France. Former biochemist <i class="fas fa-flask"></i> now I want to design websites &  <strong> cool stuff</strong>  <i class="fas fa-magic"></i>. Learning one skill at a time, after some weeks learning to git, Ruby & databases (SQL, ActiveRecord), HTML, CSS, Bootstrap & some Javascript, we did a Rails app that you can find <a href="https://www.reecover.fr">here</a>.</p>
