--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
              <i class="fas fa-headphones-alt"></i>What I'm listening
            </a>
          </li>
-         <li class="text-center">
+<!--          <li class="text-center">
            <a href="https://500px.com/picsfromserendipity" target="_blank">
              <i class="fab fa-500px"></i>My 500px profile
            </a>
-         </li>
+         </li> -->
           <li class="text-center">
            <a href="https://www.amazon.com/Within-Frame-Journey-Photographic-Vision/dp/0321605020">
              <i class="fas fa-palette"></i>Last book I read
