comment lines outdated

--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
       <h2>About this page</h2>
         <p> This page has been coded during the <a href="https://lewagon.com/program" target="_blank">FullStack program @LeWagon</a><br> <a href="https://www.instagram.com/p/Bs-Pe7VBhxC/?utm_source=ig_web_button_share_sheet"target="_blank"> See me on Le Wagon's Instagram <i class="fab fa-instagram"></i></a> </p>
         <ul class="list-inline">
-         <li class="text-center">
+  <!--        <li class="text-center">
            <a href="https://open.spotify.com/playlist/37i9dQZF1DZ06evO0KiRk4" target="_blank">
              <i class="fas fa-headphones-alt"></i>What I'm listening
            </a>
-         </li>
+         </li> -->
 <!--          <li class="text-center">
            <a href="https://500px.com/picsfromserendipity" target="_blank">
              <i class="fab fa-500px"></i>My 500px profile
