--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <div class="footer">
     <div class="card text-center ">
       <h2>About this page</h2>
-        <p> This page has been coded during the <a href="https://lewagon.com/program" target="_blank">FullStack program @LeWagon</a><br> <a href="https://www.instagram.com/p/Bs-Pe7VBhxC/?utm_source=ig_web_button_share_sheet"target="_blank"> See me on Le Wagon's Instagram <i class="fab fa-instagram"></i></a> </p>
+        <p> This page has been coded during the <a href="https://lewagon.com/program" target="_blank">FullStack program @LeWagon</a><br> <!-- <a href="https://www.instagram.com/p/Bs-Pe7VBhxC/?utm_source=ig_web_button_share_sheet"target="_blank"> See me on Le Wagon's Instagram <i class="fab fa-instagram"></i></a> --> </p>
         <ul class="list-inline">
   <!--        <li class="text-center">
            <a href="https://open.spotify.com/playlist/37i9dQZF1DZ06evO0KiRk4" target="_blank">
