modify portfolio link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p>When I'm not coding, or trying to spend quality time with my family, I love to take photos, watch a good'ol super-heroes movie, read or paint with watercolors. In fact, one day, I would <em> love </em> to write & illustrate a children's book. I'm a big dreamer. </p>
         <a href="https://github.com/v-natalia" target="_blank" class="btn-brown"><i class="fab fa-github"></i>Github</a>
         <a href="https://www.linkedin.com/in/natalia-vega-riveros/" target="_blank" class="btn-brown"> <i class="fab fa-linkedin"></i>Linkedin</a>
-        <a href="https://v-natalia.github.io/portfolio/" target="_blank" class="btn-brown"> <i class="far fa-images"></i>Portfolio</a>
+        <a href="https://v-natalia.github.io/fr/index.html" target="_blank" class="btn-brown"> <i class="far fa-images"></i>Portfolio</a>
     </div>
  <!--    <div class="card text-center links">
       <h3>I prefer real-life world, but you can also find me online in: </h2>
